[CMake] Use DEPENDS in add_llvm_library().

--- a/llvm/examples/ExceptionDemo/CMakeLists.txt
+++ b/llvm/examples/ExceptionDemo/CMakeLists.txt
@@ -3,6 +3,7 @@ set(LLVM_REQUIRES_EH 1)
 
 add_llvm_example(ExceptionDemo
   ExceptionDemo.cpp
+  DEPENDS intrinsics_gen
   )
 
 set_target_properties(ExceptionDemo PROPERTIES ENABLE_EXPORTS 1)
