--- a/llvm/examples/BrainF/CMakeLists.txt
+++ b/llvm/examples/BrainF/CMakeLists.txt
@@ -3,4 +3,5 @@ set(LLVM_LINK_COMPONENTS jit bitwriter nativecodegen interpreter)
 add_llvm_example(BrainF
   BrainF.cpp
   BrainFDriver.cpp
+  DEPENDS intrinsics_gen
   )
