--- a/llvm/tools/bugpoint-passes/CMakeLists.txt
+++ b/llvm/tools/bugpoint-passes/CMakeLists.txt
@@ -4,6 +4,7 @@ endif()
 
 add_llvm_loadable_module( BugpointPasses
   TestPasses.cpp
+  DEPENDS intrinsics_gen
   )
 
 add_dependencies(BugpointPasses bugpoint)
