--- a/clang/CMakeLists.txt
+++ b/clang/CMakeLists.txt
@@ -235,7 +235,12 @@ function(add_clang_symbol_exports target_name export_file)
 endfunction(add_clang_symbol_exports)
 
 macro(add_clang_library name)
-  llvm_process_sources(srcs ${ARGN})
+  parse_arguments(XXXARG "DEPENDS" "" ${ARGN})
+  llvm_process_sources(srcs ${XXXARG_DEFAULT_ARGS})
+  add_library(obj.${name} OBJECT ${srcs})
+  if (XXXARG_DEPENDS)
+    add_dependencies(obj.${name} ${XXXARG_DEPENDS})
+  endif ()
   if(MSVC_IDE OR XCODE)
     # Add public headers
     file(RELATIVE_PATH lib_path
@@ -265,9 +270,10 @@ macro(add_clang_library name)
   else()
     set(libkind)
   endif()
-  add_library( ${name} ${libkind} ${srcs} )
+  add_library(${name} ${libkind} $<TARGET_OBJECTS:obj.${name}>)
   if( LLVM_COMMON_DEPENDS )
     add_dependencies( ${name} ${LLVM_COMMON_DEPENDS} )
+    add_dependencies( obj.${name} ${LLVM_COMMON_DEPENDS} )
   endif( LLVM_COMMON_DEPENDS )
 
   llvm_config( ${name} ${LLVM_LINK_COMPONENTS} )
