[CMake] Centralize dependencies to tblgen'd headers with LLVM_COMMON_DEPENDS.
Pros:
  - Easy maintenance. You may edit at most a few CMakefiles to add new *.td.

Cons:
  - Dependencies would not be optimial.
    That said, it would make *.inc(s) regenerated to touch any *.td files.
    (Then, copy_if_diffeent() might save the world, though.)

  - It'd be so tough to maintain and keep dep list in each target.
  - Each *.td depends on other *.td(s) with wildcard. See also TableGen.cmake.
  - Almost every source file depends on any *.td(s).
    In other words, every source file depends on clang-tblgen.
  - clang_tablegen() generates to update *.inc with copy_if_different().

--- a/clang/CMakeLists.txt
+++ b/clang/CMakeLists.txt
@@ -363,6 +363,52 @@ mark_as_advanced(CLANG_EXECUTABLE_VERSION LIBCLANG_LIBRARY_VERSION)
 add_subdirectory(utils/TableGen)
 
 add_subdirectory(include)
+
+# CLANG_TBLGEN_DEPS is appended to LLVM_COMON_DEPENDS in each subdirectory.
+# for example; list(APPEND LLVM_COMMON_DEPENDS ${CLANG_TBLGEN_DEPS})
+
+set(CLANG_TBLGEN_DEPS
+  ClangARMNeon
+  ClangAttrClasses
+  ClangAttrDump
+  ClangAttrIdentifierArg
+  ClangAttrImpl
+  ClangAttrLateParsed
+  ClangAttrList
+  ClangAttrParsedAttrImpl
+  ClangAttrParsedAttrKinds
+  ClangAttrParsedAttrList
+  ClangAttrPCHRead
+  ClangAttrPCHWrite
+  ClangAttrSpellingListIndex
+  ClangAttrSpellings
+  ClangAttrTemplateInstantiate
+  ClangAttrTypeArg
+  ClangCC1AsOptions
+  ClangCommentCommandInfo
+  ClangCommentCommandList
+  ClangCommentHTMLNamedCharacterReferences
+  ClangCommentHTMLTags
+  ClangCommentHTMLTagsProperties
+  ClangCommentNodes
+  ClangDeclNodes
+  ClangDiagnosticAnalysis
+  ClangDiagnosticAST
+  ClangDiagnosticComment
+  ClangDiagnosticCommon
+  ClangDiagnosticDriver
+  ClangDiagnosticFrontend
+  ClangDiagnosticGroups
+  ClangDiagnosticIndexName
+  ClangDiagnosticLex
+  ClangDiagnosticParse
+  ClangDiagnosticSema
+  ClangDiagnosticSerialization
+  ClangDriverOptions
+  ClangSACheckers
+  ClangStmtNodes
+  )
+
 add_subdirectory(lib)
 add_subdirectory(tools)
 add_subdirectory(runtime)
