DEPEND: Add intrinsics_gen to clang/lib/CodeGen/CMakeLists.txt

--- a/clang/lib/CodeGen/CMakeLists.txt
+++ b/clang/lib/CodeGen/CMakeLists.txt
@@ -52,6 +52,8 @@ add_clang_library(clangCodeGen
   MicrosoftVBTables.cpp
   ModuleBuilder.cpp
   TargetInfo.cpp
+  DEPENDS
+    intrinsics_gen
   )
 
 target_link_libraries(clangCodeGen
