--- a/llvm/utils/llvm-lit/CMakeLists.txt
+++ b/llvm/utils/llvm-lit/CMakeLists.txt
@@ -3,7 +3,17 @@ if (WIN32 AND NOT CYGWIN)
   set(suffix .py)
 endif ()
 
-configure_file(
-  llvm-lit.in
-  ${LLVM_TOOLS_BINARY_DIR}/llvm-lit${suffix}
-  )
+if (NOT "${CMAKE_CFG_INTDIR}" STREQUAL ".")
+  foreach (BUILD_MODE ${CMAKE_CONFIGURATION_TYPES})
+    configure_file(
+      llvm-lit.in
+      ${CMAKE_BINARY_DIR}/${BUILD_MODE}/bin/llvm-lit${suffix}
+      )
+  endforeach ()
+else()
+  set(BUILD_MODE .)
+  configure_file(
+    llvm-lit.in
+    ${CMAKE_BINARY_DIR}/bin/llvm-lit${suffix}
+    )
+endif ()
