--- a/clang/CMakeLists.txt
+++ b/clang/CMakeLists.txt
@@ -266,6 +266,9 @@ macro(add_clang_library name)
     set(libkind)
   endif()
   add_library( ${name} ${libkind} ${srcs} )
+  set_output_directory(${name} ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} lib)
+  set_output_directory(${name} RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} bin)
+  set_output_directory(${name} LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} lib)
   if( LLVM_COMMON_DEPENDS )
     add_dependencies( ${name} ${LLVM_COMMON_DEPENDS} )
   endif( LLVM_COMMON_DEPENDS )
